--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "vue-draggable-resizable": "^2.2.0",
     "vue-draggable-resizable-rotatable": "^1.0.11",
     "vue-router": "^3.2.0",
+    "vue-worker": "^1.2.1",
     "vuetify": "^2.2.11",
     "vuex": "^3.4.0"
   },
