--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "roboto-fontface": "*",
     "vue": "^2.6.11",
     "vue-draggable-resizable": "^2.2.0",
+    "vue-draggable-resizable-gorkys": "^2.4.4",
     "vue-draggable-resizable-rotatable": "^1.0.11",
     "vue-router": "^3.2.0",
     "vue-worker": "^1.2.1",
