--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
     "@fortawesome/free-solid-svg-icons": "^5.15.1",
     "@fortawesome/vue-fontawesome": "^2.0.0",
     "axios": "^0.21.0",
+    "html2canvas": "^1.0.0-rc.7",
     "moment": "^2.29.1",
     "roboto-fontface": "*",
     "vue": "^2.6.11",
     "vue-draggable-resizable": "^2.2.0",
     "vue-draggable-resizable-gorkys": "^2.4.4",
     "vue-draggable-resizable-rotatable": "^1.0.11",
+    "vue-html2canvas": "^0.0.4",
     "vue-router": "^3.2.0",
     "vue-worker": "^1.2.1",
     "vuetify": "^2.2.11",
