--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "vue-draggable-resizable-gorkys": "^2.4.4",
     "vue-draggable-resizable-rotatable": "^1.0.11",
     "vue-html2canvas": "^0.0.4",
+    "vue-moveable": "^1.8.10",
     "vue-router": "^3.2.0",
     "vue-worker": "^1.2.1",
     "vuetify": "^2.2.11",
