--- a/package.json
+++ b/package.json
@@ -40,7 +40,10 @@
     "eslint": "^6.7.2",
     "eslint-plugin-prettier": "^3.1.3",
     "eslint-plugin-vue": "^6.2.2",
+    "node-sass": "^5.0.0",
     "prettier": "^1.19.1",
+    "sass": "^1.32.11",
+    "sass-loader": "^10.1.1",
     "vue-cli-plugin-vuetify": "~2.0.7",
     "vue-template-compiler": "^2.6.11"
   },
